RGB Curve Node: cursor jumps back (OSX only) #44605

Closed
opened 2015-05-04 22:50:54 +02:00 by filip mond · 32 comments

System Information
OS X 10.8.5 NVIDIA GeForce GTX 780M 4096 MB

Blender Version
Broken: 2.68 - 2.74 4e7ef3f
Worked: 2.63

Short description of error
On mouse release (after curve adjust), cursor jumps (or appears) back on place of initial click in RGB Curve node.
https://dl.dropboxusercontent.com/u/55113627/RGB_Curve_behavior_50%25.mov

Exact steps for others to reproduce the error

  • add RGB Curve node
  • drag and move curve to adjust
  • on mouse release curve is adjured, but mouse pointer jumps back to initial click

I don't have all versions of blender now so I can't say when exactly this behavior occurred, but possibly with cycles RGB node.
2.63 and older versions works OK (this version of cycles is without RGB Curve node), 2.68 is first one I have on computer that works with this issue.

I use tablet, but I don't have a pen on it :)
I tried to disconnect tablet … the same behavior.

If you need some more info I can post I'm one big ear. Thank you

**System Information** OS X 10.8.5 NVIDIA GeForce GTX 780M 4096 MB **Blender Version** Broken: 2.68 - 2.74 4e7ef3f Worked: 2.63 **Short description of error** On mouse release (after curve adjust), cursor jumps (or appears) back on place of initial click in RGB Curve node. https://dl.dropboxusercontent.com/u/55113627/RGB_Curve_behavior_50%25.mov **Exact steps for others to reproduce the error** - add RGB Curve node - drag and move curve to adjust - on mouse release curve is adjured, but mouse pointer jumps back to initial click I don't have all versions of blender now so I can't say when exactly this behavior occurred, but possibly with cycles RGB node. 2.63 and older versions works OK (this version of cycles is without RGB Curve node), 2.68 is first one I have on computer that works with this issue. I use tablet, but I don't have a pen on it :) I tried to disconnect tablet … the same behavior. If you need some more info I can post I'm one big ear. Thank you
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @FilipMond

Added subscriber: @FilipMond

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Hi, this is strange behavior. some questions.

  • Does this happen on every curve? (try spot lamp falloff curve for example... or texture painting falloff curve)
  • Does this happen after resetting to factory defaults?
  • If you have access to another system, can you redo the bug elsewhere?
  • Are you using any kind of special/non-standard input software/drivers. (we had reports that blender fails with http://smoothmouse.com for eg).
Hi, this is strange behavior. some questions. - Does this happen on every curve? (try spot lamp falloff curve for example... or texture painting falloff curve) - Does this happen after resetting to factory defaults? - If you have access to another system, can you redo the bug elsewhere? - Are you using any kind of special/non-standard input software/drivers. (we had reports that blender fails with http://smoothmouse.com for eg).
Author
  • This seems like it happens on every curve
    https://dl.dropboxusercontent.com/u/55113627/%3E%20Blender/test-RGBCurvesNode.mov
  • I tested on factory setting
  • Same behavior on other two iMacs. I don't have another OS like Linux or Windows, but from your reaction I see you don't have this issue.
    (iMac 27" OS X Yosemitte 10.10.3 ATI Radeon HD 5750 1024 MB and iMac 24" OS X 10.8.5 ATI Radeon HD 2600 Pro 256 MB)
  • I don't use any "non-standard" inputs, I use only Wacom tablet, but the as I wrote - same behavior is on iMacs without any special inputs.

Now noticed one more think (see video) when I move slider, then on mouse release pointer appears on first click position - as with curve manipulation, and in this case it looks helpful - we don't have to move back pointer into slider area, and that is why I didn't post it earlier as a bug.
But small problem here is - if I click again (to move slider) without any mouse pointer movement, than node jumps :) If I move (even a bit) mouse pointer it doesn't happen. https://dl.dropboxusercontent.com/u/55113627/%3E%20Blender/test-Slider.mov

Here is a behavior in 2.63 for reference. Pointer stay at a point of release (curve or slider).
https://dl.dropboxusercontent.com/u/55113627/%3E%20Blender/test-263.mov

Somethink that maybe helps identify error:
I use Screenflow for recording, in this app I can activate "Click effect" on mouse click.
In videos you can see - click effect is not there for clicks with mentioned issues, but visible in test in 2.63 where it works. So also this app see differences with mouse click to move node and move curve.

- This seems like it happens on every curve https://dl.dropboxusercontent.com/u/55113627/%3E%20Blender/test-RGBCurvesNode.mov - I tested on factory setting - Same behavior on other two iMacs. I don't have another OS like Linux or Windows, but from your reaction I see you don't have this issue. (iMac 27" OS X Yosemitte 10.10.3 ATI Radeon HD 5750 1024 MB and iMac 24" OS X 10.8.5 ATI Radeon HD 2600 Pro 256 MB) - I don't use any "non-standard" inputs, I use only Wacom tablet, but the as I wrote - same behavior is on iMacs without any special inputs. Now noticed one more think (see video) when I move slider, then on mouse release pointer appears on first click position - as with curve manipulation, and in this case it looks helpful - we don't have to move back pointer into slider area, and that is why I didn't post it earlier as a bug. But small problem here is - if I click again (to move slider) without any mouse pointer movement, than node jumps :) If I move (even a bit) mouse pointer it doesn't happen. https://dl.dropboxusercontent.com/u/55113627/%3E%20Blender/test-Slider.mov Here is a behavior in 2.63 for reference. Pointer stay at a point of release (curve or slider). https://dl.dropboxusercontent.com/u/55113627/%3E%20Blender/test-263.mov Somethink that maybe helps identify error: I use Screenflow for recording, in this app I can activate "Click effect" on mouse click. In videos you can see - click effect is not there for clicks with mentioned issues, but visible in test in 2.63 where it works. So also this app see differences with mouse click to move node and move curve.

Added subscribers: @MartijnBerger, @ThomasDinges, @Sergey

Added subscribers: @MartijnBerger, @ThomasDinges, @Sergey

So far seems nobody cant reproduce..

@ThomasDinges, @MartijnBerger: do you mind trying your luck reproducing the issue?

So far seems nobody cant reproduce.. @ThomasDinges, @MartijnBerger: do you mind trying your luck reproducing the issue?
Author

Nobody with OS X can't reproduce this?

My wife notebook MacBook Pro, OS X Yosemite 10.10.2, Intel HD Graphics 4000 1024 MB.
It is the fourth Mac with this issue.

Nobody with OS X can't reproduce this? My wife notebook MacBook Pro, OS X Yosemite 10.10.2, Intel HD Graphics 4000 1024 MB. It is the fourth Mac with this issue.
Member

I can reproduce on macbook pro with iris pro.

I can reproduce on macbook pro with iris pro.

Added subscriber: @mont29

Added subscriber: @mont29

Changed to unconfirmed state, we are sorry, but we have to be able to reproduce an issue to investigate it. If no dev can do so within two weeks, we’ll have to close the report…

Changed to unconfirmed state, we are sorry, but we have to be able to reproduce an issue to investigate it. If no dev can do so within two weeks, we’ll have to close the report…

@mont29, thought @MartijnBerger managed to reproduce the issue?

@mont29, thought @MartijnBerger managed to reproduce the issue?

Arg! sorry, read 'can’t' instead of 'can' :(

Arg! sorry, read 'can’t' instead of 'can' :(
Martijn Berger was assigned by Sergey Sharybin 2015-05-25 20:54:59 +02:00

@MartijnBerger, do you mind looking into fixing the issue?

@MartijnBerger, do you mind looking into fixing the issue?
Member

Added subscriber: @Ton

Added subscriber: @Ton
Member

This option is broken on Macs since the beginning. Mouse warping or hiding is against the Apple UI guidelines, which is why it works so bad I guess.

How did the OSX team here accept it? Easy to see how broken it is:

  • get a panel with 2 number buttons next to each other
  • drag value of left button to right, move mouse on virtual position of the other button. you see it hilight.
  • release mouse, click. Input goes to the wrong button.

I'm in agreement with OS X guidelines, and against manipulating mouse positions. Nice for some people, but then only behind a user pref.
Why is it bad? It kills muscle memory, it makes you lift up the mouse all the time to put it back. So in the end you don't even win anything (as in speed of use).
I can see why some like it though, especially if you navigate around with a mouse-lift habit.

This option is broken on Macs since the beginning. Mouse warping or hiding is against the Apple UI guidelines, which is why it works so bad I guess. How did the OSX team here accept it? Easy to see how broken it is: - get a panel with 2 number buttons next to each other - drag value of left button to right, move mouse on virtual position of the other button. you see it hilight. - release mouse, click. Input goes to the wrong button. I'm in agreement with OS X guidelines, and against manipulating mouse positions. Nice for some people, but then only behind a user pref. Why is it bad? It kills muscle memory, it makes you lift up the mouse all the time to put it back. So in the end you don't even win anything (as in speed of use). I can see why some like it though, especially if you navigate around with a mouse-lift habit.

@Ton,

  • There's no wrapping/mouse position manipulation involved in this particular case. If OSX can not survive hiding the mouse cursor then well....
  • This is and option, which is called "Continuous Grab" (User Preferences -> Input -> Continuous Grab). It was enabled by default quite some time ago. Discussion about whether it was right or wrong decision is a separate topic, this report clearly shows a bug which is to be addressed.

EDIT, well actually it might be wrapping when shift is holded down. Not sure if any wrapping happens without shift tho.

@Ton, - There's no wrapping/mouse position manipulation involved in this particular case. If OSX can not survive hiding the mouse cursor then well.... - This _is_ and option, which is called "Continuous Grab" (User Preferences -> Input -> Continuous Grab). It was enabled by default quite some time ago. Discussion about whether it was right or wrong decision is a separate topic, this report clearly shows a bug which is to be addressed. EDIT, well actually it might be wrapping when shift is holded down. Not sure if any wrapping happens without shift tho.
Member

Sergey: in contrary. It wraps the mouse in this case too (and it fails to).

Sergey: in contrary. It wraps the mouse in this case too (and it fails to).
Author

Sorry, seems like my english skills are not enough to clearly understand the discussion now, so only one note to ton's post "This option is broken on Macs since the beginning." - as mentioned in the bug description - it worked well in 2.63 and older versions on Mac.

Sorry, seems like my english skills are not enough to clearly understand the discussion now, so only one note to ton's post "This option is broken on Macs since the beginning." - as mentioned in the bug description - it worked well in 2.63 and older versions on Mac.
Campbell Barton changed title from RGB Curve Node – cursor jumps back to RGB Curve Node: cursor jumps back (OSX only) 2015-06-01 09:06:10 +02:00

Added subscriber: @Leon95

Added subscriber: @Leon95

@FilipMond, this is maybe caused by the default activated Continuous Grab and the Update in 2.66 (see Release Notes). You can deactivate it in the preferences (Input Tab)

@FilipMond, this is maybe caused by the default activated `Continuous Grab` and the Update in 2.66 (see [Release Notes](http://wiki.blender.org/index.php/Dev:Ref/Release_Notes/2.66/Usability#Smaller_UI_fixes)). You can deactivate it in the preferences (Input Tab)

Removed subscriber: @Leon95

Removed subscriber: @Leon95
Author

Added subscriber: @Leon95

Added subscriber: @Leon95
Author

@Leon95: Thank you. You are right, disabled "Continuous Grab" keeps cursor behaviour OK.
But "Continuous Grab" is super useful thing ... any chance to find solution?

@Leon95: Thank you. You are right, disabled "Continuous Grab" keeps cursor behaviour OK. But "Continuous Grab" is super useful thing ... any chance to find solution?
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

If its because of continuous then it is known todo any reason we are keeping this open as a bug a not a to do?

If its because of continuous then it is known todo any reason we are keeping this open as a bug a not a to do?

@Blendify, this is not the same as continuous grab issue, even when continuous grab is working properly (for view-port operations) this glitch still happens.

@Blendify, this is not the same as continuous grab issue, even when continuous grab is working properly (for view-port operations) this glitch still happens.

This issue was referenced by d9d3a2a500

This issue was referenced by d9d3a2a5009c76f68fd2e6456db7dac61c4d2e49

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @brecht

Added subscriber: @brecht

Fixed both the original reported issues with curves and the button focus issue explained by Ton.

The main issue is that contrary to what the comment in the code said, the cursor position must be set again when continuous grab ends, the same as on other platforms. Most of the changes are fixing some inconsistencies in coordinate space conversion to make that work.

Fixed both the original reported issues with curves and the button focus issue explained by Ton. The main issue is that contrary to what the comment in the code said, the cursor position must be set again when continuous grab ends, the same as on other platforms. Most of the changes are fixing some inconsistencies in coordinate space conversion to make that work.
Author

I know it is not a chat here, but I have to say ... Thank you million times for this fix :)

I know it is not a chat here, but I have to say ... Thank you million times for this fix :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
10 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44605
No description provided.