Fix T44605: OS X continuous grab issues.